Closed Bug 1646974 Opened 4 years ago Closed 4 years ago

Missing requests in Netmonitor

Categories

(DevTools :: Netmonitor, defect, P1)

78 Branch
Desktop
All
defect

Tracking

(firefox-esr68 unaffected, firefox-esr78 wontfix, firefox77 unaffected, firefox78 wontfix, firefox79 verified, firefox80 verified)

VERIFIED FIXED
Firefox 80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- wontfix
firefox77 --- unaffected
firefox78 --- wontfix
firefox79 --- verified
firefox80 --- verified

People

(Reporter: dansoper, Assigned: daisuke)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:78.0) Gecko/20100101 Firefox/78.0

Steps to reproduce:

Open Netmonitor, then load this page:
http://adobkin.name/firefox/unstyled-flash-bug.html

Actual results:

2 requests are listed (the HTML page, and the favicon)

Expected results:

3 requests should be listed (a css/php file)

I came across this problem while debugging something else. The similarity between my situation and the above page is that the css file is getting added using document.write.

The problem is in Firefox Nightly, and 78. It is not in 77.

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: Untriaged → Netmonitor
Product: Firefox → DevTools

Thanks for reporting!
I can reproduce.

Looks like this regressed.

Severity: -- → S3
Priority: -- → P1

Hello! Reproduced the issue using Firefox 79.0a1 (20200621093846) and 78.0b9 (20200619002543) on Windows 10x64, macOS 10.12 and Ubuntu 18.04. Firefox 77.0.1 (20200602222727) is not affected.
I ran a regression range on Windows 10x64 and mozregression pointed to:
Found commit message: Bug 1633850: Use the loading policy to restrict networks of StyleEditor. r=Honza

Daisuke Akatsuka can you please have a look? Thank you!

Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Ever confirmed: true
Flags: needinfo?(daisuke)
OS: Unspecified → All
Regressed by: 1633850
Hardware: Unspecified → Desktop

Thank you very much for reporting!
Yeah, I could reproduce. I will take a look at this.

Assignee: nobody → daisuke
Status: NEW → ASSIGNED
Flags: needinfo?(daisuke)
Pushed by dakatsuka.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/31930f9ca481
Introduce and use isInDevToolsContext flag. r=Honza,necko-reviewers,dragana
https://hg.mozilla.org/integration/autoland/rev/b440bc12d58e
Add a test for the stylesheet which is loaded as internal. r=Honza
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 80

The patch landed in nightly and beta is affected.
:daisuke, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(daisuke)
Flags: needinfo?(daisuke)

Comment on attachment 9158464 [details]
Bug 1646974: Introduce and use isInDevToolsContext flag.

Beta/Release Uplift Approval Request

  • User impact if declined: We might make users misunderstand networking requests since requests of stylesheets might be missed.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We introduced a flag to our platform, but it is only for the DevTools purpose.
  • String changes made/needed:
Attachment #9158464 - Flags: approval-mozilla-beta?
Attachment #9158788 - Flags: approval-mozilla-beta?

Comment on attachment 9158464 [details]
Bug 1646974: Introduce and use isInDevToolsContext flag.

Approved for 79.0b3.

Attachment #9158464 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9158788 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Confirmed with 79.0b2 on Windows 10.
Verified with 80.0a1 (2020-07-02) and 79.0b3 on Windows 10, macOS 10.15.5, Ubuntu 18.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: