Bug 1646974: Introduce and use isInDevToolsContext flag. r=Honza,dragana a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D80623